Final tweak of slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -184,7 +184,7 @@ gitcreds::gitcreds_set()
 .pull-left[
 
 ```r
-use_github()
+usethis::use_github()
 ```
 
 ]
@@ -297,7 +297,7 @@ git merge documentation
 Contact: ben@bensoltoff.com
 =======
 Please contact me at ben@bensoltoff.com
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; origin main:README.md
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; documentation:README.md
 ```
 
 --
